// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Selectors active 1`] = `[MockFunction]`;

exports[`<Link /> Selectors focus 1`] = `[MockFunction]`;

exports[`<Link /> Selectors hover 1`] = `[MockFunction]`;

exports[`<Link /> Size large 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 ehXWjQ"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> Size medium 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 bEnuyy"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> Size small 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 lnuMty"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various link props href 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 ehXWjQ"
    color="shade.980"
    data-testid="ds-text"
    href="https://www.razorpay.com"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various link props rel 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 ehXWjQ"
    color="shade.980"
    data-testid="ds-text"
    href="https://www.razorpay.com"
    rel="noreferrer noopener"
    target="_blank"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various link props renders a link with default props 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 bEnuyy"
    color="shade.980"
    data-testid="ds-text"
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various link props renders a link with disabled prop 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 cyMJUi"
    color="shade.980"
    data-testid="ds-text"
    disabled=""
    href=""
    target="_self"
  >
    Displaying some link
  </a>
</div>
`;

exports[`<Link /> various link props target 1`] = `
<div>
  <a
    class="Textweb__Text-sc-6jf9e4-0 Linkweb__StyledText-sc-1u7mgfj-0 ehXWjQ"
    color="shade.980"
    data-testid="ds-text"
    href="https://www.razorpay.com"
    target="_blank"
  >
    Displaying some link
  </a>
</div>
`;
